--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StrideSync - Your Ultimate Fitness Companion</title>
+    <meta name="google-site-verification" content="e5XFLXzdVcwCSTzy4Z5a5EZbX2qFqIJBWxbLU1TZZVQ" />
     <style>
         /* Reset some default styles */
         * {
